# simpleburn

./: CMakeLists.txt  simpleburn_1.7.3.orig.tar.gz.delta  simpleburn_1.7.3.orig.tar.gz.id
debian/: changelog  control  copyright  docs  rules  watch
debian/patches/: fix-bashisms.patch  fix_desktop.patch  series  use-sh-as-bash.patch
doc/: AUTHORS  ChangeLog  Developpers.txt  I18N  INSTALL  INSTALL-EN  INSTALL-FR  LICENCE-FR  LICENSE  LICENSE-EN  TESTS  TODO  cdio.txt  dvdread.dia
po/: CMakeLists.txt  bg.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  pl.po  ru.po  simpleburn.pot  sr.po  sv.po
scripts/: CMakeLists.txt  simpleburn-abort-operation.sh  simpleburn-blank-media.sh  simpleburn-burn-audio.sh  simpleburn-burn-data.sh  simpleburn-burn-iso.sh  simpleburn-cdrtools-burning-suite.sh  simpleburn-copy-audio.sh  simpleburn-copy-data.sh  simpleburn-detect.sh  simpleburn-extract-audio.sh  simpleburn-extract-iso.sh  simpleburn-gauges.sh  simpleburn-get-datasize.sh  simpleburn-libburnia-burning-suite.sh  simpleburn-ripdvd-detection.sh  simpleburn-ripdvd-encoding.sh  simpleburn-udev-media-detection.sh  simpleburn.sh
src/: CMakeLists.txt  callbacks-blank.c  callbacks-burn.c  callbacks-copy.c  callbacks-extract.c  callbacks-misc.c  callbacks-videodvd.c  callbacks.c  callbacks.h  cdio_mmc.c  common-checks.c  common-detection.c  common-filesize.c  common-interface.c  common-launch.c  config.h.cmake  mediainfos.c  mediainfos.h  progress.c  progress.h  simpleburn-cdio-media-detection.c  simpleburn-gauges.c  simpleburn.appdata.xml  simpleburn.c  simpleburn.desktop  simpleburn.h  simpleburn.sh  simpleburn.ui  t_cdinfos.h
src/tmp/: libcdio-cmds.c  libcdio-disctype.c  readme.txt
